--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mkcp",
-  "version": "0.2.0",
-  "description": "Make and Copy files / folders recursively.",
+  "version": "0.2.1",
+  "description": "Node.js based, file and folder duplication utility.",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
